--- a/css/_layout.sass
+++ b/css/_layout.sass
@@ -27,6 +27,12 @@ body, html
   margin-top: 60px
 .marginTop-80
   margin-top: 80px
+.marginTop-100
+  margin-top: 100px
+.marginTop-150
+  margin-top: 150px
+.marginTop-200
+  margin-top: 200px
 
 ///*margin-bottom*
 .marginBottom-20
@@ -39,31 +45,42 @@ body, html
   margin-bottom: 80px
 .marginBottom-100
   margin-bottom: 100px
+.marginBottom-150
+  margin-bottom: 150px
 .marginBottom-200
   margin-bottom: 200px
 ///*padding-top*
 .paddingTop-20
-  margin-top: 20px
+  padding-top: 20px
 .paddingTop-40
-  margin-top: 40px
+  padding-top: 40px
 .paddingTop-60
-  margin-top: 60px
+  padding-top: 60px
 .paddingTop-80
-  margin-top: 80px
+  padding-top: 80px
 .paddingTop-100
-  margin-top: 100px
+  padding-top: 100px
+.paddingTop-150
+  padding-top: 150px
+.paddingTop-200
+  padding-top: 200px
 
 ///*padding-bottom*
 .paddingBottom-20
-  margin-bottom: 20px
+  padding-bottom: 20px
 .paddingBottom-40
-  margin-bottom: 40px
+  padding-bottom: 40px
 .paddingBottom-60
-  margin-bottom: 60px
+  padding-bottom: 60px
 .paddingBottom-80
-  margin-bottom: 80px
+  padding-bottom: 80px
 .paddingBottom-100
-  margin-bottom: 100px
+  padding-bottom: 100px
+.paddingBottom-150
+  padding-bottom: 150px
+.paddingBottom-200
+  padding-bottom: 200px
+
 
 ///*opacity*
 .opacity-01
